# ufbgc

./: .gitignore  CMakeLists.txt  README.md  ufbgc.pc.in
example/: example.c  expected_output.txt
src/: CMakeLists.txt  ufbgc.c  ufbgc.h
